app/assets/stylesheets/main.css.scss
@import 'reset';
@import 'variables';
@import 'mixins';

body {
  font: 18px $font-stack;
  line-height: $line-height;
  color: $primary-color;
  margin: 0 auto;
  padding: 0;
  max-width: 100%;
  background-color: #fff;
}

h1 {
  font-family: $font-stack-sec;
  font-size: $fsize;
  color: $secondary-color;
  border-bottom: 2px solid $blue;
  padding: 12px 0;
  width: 1.875em;
  text-transform: uppercase;
  margin: 0 0 45px 0;
}

h2 {
  font-family: $font-stack-sec;
  font-size: $fsize;
  color: $secondary-color;
  padding: 12px 0 24px 0;
  text-transform: uppercase;
  margin: 0;
}

h3 {
  font: 24px $font-stack-sec;
  color: $primary-color;
  padding: 12px 0 0 0;
}

img, embed, object, video {
    max-width: 100%;
  }

p {
  padding: .6em 0;
}

header {
  background-color: #f6f6f6;
  height: 6.2em;
  border-bottom: solid 1px #dfdfdf;
  width: 100%;
  z-index:1;
  position: fixed;

  .content {
    padding: 0 1em;
    margin: 0 auto;
  }
}

@media (max-width: 40em){
  header {
    height: 3.2em;
  }
}

.logo {
  background: image-url("logo.png") transparent 0 0;
  width: 145px;
  height: 126px;
  float: left;
}

@media (max-width: 40em){
  .logo {
    background: image-url("logo.png") no-repeat transparent 0 0;
    background-size: 100%;
    width: 76px;
    float: left;
  }
}

nav {
    float: right;
    padding-top: 2em;

    ul {
      margin: 0;
      padding: 0;
      list-style: none;
    }

    li {display: inline-block;}

    a {
      display: block;
      padding: 6px 0;
      margin: 0 12px;
      text-decoration: none;
      text-transform: uppercase;
      color: $secondary-color;
      font-family: $font-stack-sec;
      letter-spacing: .05em;
    }

    a:hover, .active {
      @include active;
    }
}

.anchor-link { 
  background: image-url("icon-nav.png") no-repeat 0 0;
  width: 25px;
  height: 20px;
  display: none; 
  text-align: right; 
  padding: 0; 
  text-align: center; 
  text-decoration: none; 
  margin: 3px; 
  float: right; 
}



#mobile-nav { display: none; }

@media (max-width: 40em){
  
  nav > ul { 
    display: none; 
  }

  .anchor-link, #mobile-nav { 
    display: block; 
  }

  nav {
    padding-top: .9em;
    
    a {
      margin: 0;
    }

    a:hover, .active { 
      border-bottom: 0;
    }
  }

  ul.open { 
    background-color: #f6f6f6;
    display: block;
    list-style: none outside none;
    margin: 0;
    padding: 0;
    position: absolute;
    right: 0;
    top: 112px;
    width: 100%;
    z-index: 500; 
  
    li { 
      display: block; 
      list-style: none; 
      text-align: center; 

      a { 
        display: block; 
        padding: 20px 0; 
        border-bottom: 1px solid #ccc; 
        text-decoration: none; 
      }

      &:hover { 
        background-color: #ccc; 
        color: #fff; 
      }
    }  
  }
}

.projects {

  h1 {
    margin-left: 0.8em;
  }
}

.connect {

  .content-img {
  height: 29em;
  background: image-url("map.png") no-repeat #d7f5ff 0 0;
  background-position: center;
  }

  p {
    padding: 0;
  }
}

.about, .connect {
  text-align: left;

  .content {
    padding-left: 2.5em;
  }
}

.contact-labels {
  font-family: $font-stack-sec;
  color: $secondary-color;
  font-size: 15px;
  padding-right: 10px;
}

.contact-info {
  margin-top: 100px;
}

@media (max-width: 48em){
  .contact-info {
    margin: 0;
  }
}

.san-francisco {
  color: $secondary-color;
  font-family: $font-stack-sec;
  margin: 0 auto;
  text-transform: uppercase;
  font-size: 30px;
  position: relative;
  top: 50px;
  text-align: center;
  padding-top: 40px;
  letter-spacing: .1em;
}


/* Project Image Flip*/

.grid {
  max-width: 70.125em /* 1122px */;
  margin: 0 auto;
  padding: 0;

  ul {
    list-style: none;
    text-align: center;
    margin: 0 auto;
  }

  li {
    display: inline-block;
    margin: 0;
    padding: 0.625em /* 10px */;
  }

  img {
    max-width: 100% /* 350px */;
    max-height: 233px;
  }

  .boxes {
    float: left;
    display: inline;
    margin: 5px;
  }
}

.f1_container {
  @include flip-size;
  position: relative;
  margin: 0 auto;
}

.f1_container {
  @include perspective(1000);
}

.f1_card {
  @include flip-size;
  @include transform;
  border: 1px solid #e4e4e4;
}

.f1_container:hover .f1_card {
  @include transform-rotate;
}

.face {
  position: absolute;
  @include flip-size;
  @include backface-visibility(hidden);
}

.face.back {
  @include flip-size;
  @include transform-rotate;
  @include box-sizing;
  color: $secondary-color;
  font-family: $font-stack;
  display: block;
  padding: 0;
  font-size: 15px;
  line-height: 1.5em;
  text-align: left;
  background-color: #fff;
  padding: 25px;

  .title {
    font-family: $font-stack-sec;
    font-size: 22px;
  }

  .role {
    font-size: $fsize;
    font-family: $font-stack-sec;
    text-transform: uppercase;
  }
}

a.btn {
     @include border-radius(3px);
    font-family: $font-stack-sec;
    background-color: $blue;
    color: #fff;
    padding: 15px;
    font-size: 15px;
    text-decoration: none;
    margin: 10px 0 20px;
    letter-spacing: 0.05em;
    display: inline-block;
    
    &:hover {
      background-color: $blue-hover;
    }
  } 

/* Projects */

.project_individual {
  padding-top: 10em;
}

@media (max-width: 40em){
  .project_individual {
  padding-top: 0;
  }
}

.project_description {
  p {
    margin-bottom: 40px;
  }
}

.project_images {
  margin-top: 1em;
  text-align: center;

  img {
    margin-bottom: 35px;
    border: 1px solid #e7e7e7;
  }

  .no-border {
    border: 0;
  }
}

.prev {
  position: fixed;
  left: 0;
  top: 40%;
  z-index: 1;

  a {
    background: image-url("arrows_prev_grey.png") no-repeat 5px center;
    width: 115px;
    margin: 0;
    font-family: $font-stack-sec;
    font-size: 0.8em;
    line-height: 1.5em;
    padding: 12px;    
    text-decoration: none;
    text-align: right;
    text-transform: uppercase;
    text-decoration: none;
    color: #fff;

    &:hover {
    background: image-url("arrows_prev_white.png") $blue no-repeat 5px center;
    @include border-radius(3px);
    }    

    &:hover:after {
      content: "PREV";
      padding-left: 10px;
    }
  }
}

.next {
  position: fixed;
  right: 0;
  top: 40%;
  z-index: 1;

  a {
    background: image-url("arrows_next_grey.png") no-repeat 10px center;
    width: 115px;
    margin: 0;
    font-family: $font-stack-sec;
    font-size: 0.8em;
    line-height: 1.5em;
    padding: 12px;    
    text-decoration: none;
    text-align: right;
    text-transform: uppercase;
    text-decoration: none;
    color: #fff;

    &:hover {
    background: image-url("arrows_next_white.png") $blue no-repeat 55px center;
    @include border-radius(3px);
    }    

    &:hover:before {
      content: "NEXT";
      padding-right: 10px;
    }
  }
}

section {
  text-align: center;
  clear: both;
  padding: 0;
  margin: 0 0 100px 0;

  .content {
    max-width: 63em;
    min-height: 39em;
    margin: 0 auto;
    padding: 0 1em; 
    clear: both;
    position: relative;
  }

  .content2 {
    max-width: 63em;
    margin: 0 auto;
    padding: 0 1em;
    clear: both;
    position: relative;
  }
}



/*  SECTIONS  */

/*  COLUMN SETUP  */
.col {
  display: block;
  float: left;
  margin: 1% 0 1% 1.6%;
  text-align: left;

  &:first-child {
    margin-left: 0;
  }
}

/*  GROUPING  */
.group:before,
.group:after {
  content:"";
  display:table;
}
.group:after {
  clear: both;
}

/*  GRID OF THREE  */
.span_3_of_3 {
  width: 100%;
}
.span_2_of_3 {
  width: 66.1%;
}
.span_1_of_3 {
  width: 32.2%;
}

/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */

@media only screen and (max-width: 48em) {
  .col { 
    margin: 1% 0;
  }
}

@media only screen and (max-width: 48em) {

  .span_3_of_3 {
    width: 100%; 
  }
  .span_2_of_3 {
    width: 100%; 
  }
  .span_1_of_3 {
    width: 100%;
  }
}

.home .span_3_of_3 {
  text-align: center;
}

footer {
  background-color: #333;
  color: #666;
  height: 10em;
  line-height: 1.5em;
  max-width: 100%;
  display: block;
  font-size: .7em;
  letter-spacing: .05em;
  padding: 20px;

  .social-icons {
    float: right;
    margin-right: 40px;

    a {
      width: 28px;
      height: 28px;
      display: block-inline;
      float: left;
      margin: 0 10px;
    }

    .twitter {
      background: image-url("icon-twitter.png") no-repeat 0 0;
    }

    .linkedin {
      background: image-url("icon-linkedin.png") no-repeat 0 0;
    }

    .dribbble {
      background: image-url("icon-dribbble.png") no-repeat 0 0;
    }
  }
  @media (max-width: 40em){
    .social-icons {
      float: none;
    }
  }
}

